# redos-detector

./: CHANGELOG.md  Cargo.toml  README.md
src/: arrays.rs  ast.rs  character_groups.rs  checker_reader.rs  code_point.rs  collect_results.rs  downgrade_pattern.rs  infinite_loop_tracker.rs  is_unbounded_reader.rs  lib.rs  map.rs  node_extra.rs  once.rs  our_range.rs  parse.rs  quantifier.rs  reader.rs  result_cache.rs  sets.rs  to_friendly.rs  tree.rs
src/character_reader/: join.rs  level0.rs  level1.rs  level2.rs  map.rs  mod.rs
tests/: conformance.rs  downgrade.rs  review_regressions.rs  smoke.rs  to_friendly.rs
tests/cases_data/: mod.rs  trail_counts.rs
