[package]
name = "redos-detector"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
description = "static ReDoS vulnerability analysis of ECMA-262 regex patterns"
license = "MIT"
repository = "https://github.com/hey-jj/redos-detector"
readme = "README.md"
keywords = ["redos", "regex", "security", "backtracking"]
categories = ["algorithms", "text-processing"]

[dependencies]

[lib]
name = "redos_detector"
path = "src/lib.rs"
